[BACK/API] Working API for GET Users (with filtering, ordering and pagination)
