# backend/srcs/docs/swagger.json
@@ -423,19 +423,19 @@
             "properties": {
                 "id": {
                     "type": "string",
-                    "example": "01HZ0MMK4S6VQW4WPHB6NZ7R7X"
+                    "example": "module_01HZ0MMK4S6VQW4WPHB6NZ7R7X"
                 },
-                "lastUpdate": {
+                "last_update": {
                     "type": "string",
                     "example": "2025-02-18T15:00:00Z"
                 },
-                "lastestVersion": {
-                    "type": "string",
-                    "example": "1.7"
-                },
-                "lateCommits": {
+                "late_commits": {
                     "type": "integer",
                     "example": 2
+                },
+                "latest_version": {
+                    "type": "string",
+                    "example": "1.7"
                 },
                 "name": {
                     "type": "string",
@@ -500,11 +500,11 @@
                 },
                 "id": {
                     "type": "string",
-                    "example": "01HZ0MMK4S6VQW4WPHB6NZ7R7X"
+                    "example": "role_01HZ0MMK4S6VQW4WPHB6NZ7R7X"
                 },
                 "name": {
                     "type": "string",
-                    "example": "captain-hook"
+                    "example": "IT"
                 }
             }
         },
@@ -518,24 +518,7 @@
                 },
                 "name": {
                     "type": "string",
-                    "example": "captain-hook"
-                }
-            }
-        },
-        "users.FtUser": {
-            "type": "object",
-            "properties": {
-                "ftId": {
-                    "type": "string",
-                    "example": "1492"
-                },
-                "ftIsStaff": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "login": {
-                    "type": "string",
-                    "example": "heinz"
+                    "example": "IT"
                 }
             }
         },
@@ -543,24 +526,39 @@
             "description": "API User model",
             "type": "object",
             "properties": {
-                "ftUser": {
-                    "$ref": "#/definitions/users.FtUser"
-                },
-                "id": {
+                "ft_id": {
                     "type": "string",
-                    "example": "01HZ0MMK4S6VQW4WPHB6NZ7R7X"
+                    "example": "1492"
                 },
-                "isStaff": {
+                "ft_is_staff": {
                     "type": "boolean",
                     "example": true
                 },
-                "lastUpdate": {
+                "ft_login": {
+                    "type": "string",
+                    "example": "heinz"
+                },
+                "ft_photo": {
+                    "type": "string",
+                    "example": "https://intra.42.fr/some-login/some-id"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "user_01HZ0MMK4S6VQW4WPHB6NZ7R7X"
+                },
+                "is_staff": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "last_seen": {
                     "type": "string",
                     "example": "2025-02-18T15:00:00Z"
                 },
-                "url": {
-                    "type": "string",
-                    "example": "https://intra.42.fr/some-login/some-id"
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/roles.Role"
+                    }
                 }
             }
         },
@@ -574,7 +572,7 @@
                 },
                 "id": {
                     "type": "string",
-                    "example": "01HZ0MMK4S6VQW4WPHB6NZ7R7X"
+                    "example": "user_01HZ0MMK4S6VQW4WPHB6NZ7R7X"
                 },
                 "login": {
                     "type": "string",
